--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@mantine/core": "7.12.2",
     "@mantine/hooks": "7.12.2",
+    "@tabler/icons-react": "^3.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
