Added dockerfile and modified npm test yml to run manually.

--- a/.github/workflows/npm_test.yml
+++ b/.github/workflows/npm_test.yml
@@ -1,13 +1,11 @@
 name: npm test
 
 on:
-  pull_request:
-    branches:
-      - '**'
+  workflow_dispatch:
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event.number || github.sha }}
-  cancel-in-progress: true
+# concurrency:
+#   group: ${{ github.workflow }}-${{ github.event.number || github.sha }}
+#   cancel-in-progress: true
 
 jobs:
   test_pull_request:
