--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mantine/core": "7.12.2",
     "@mantine/hooks": "7.12.2",
     "@tabler/icons-react": "^3.14.0",
+    "@tanstack/react-query": "^5.55.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
