--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "superagent": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
