--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mantine/hooks": "7.12.2",
     "@tabler/icons-react": "^3.14.0",
     "@tanstack/react-query": "^5.55.4",
+    "@types/superagent": "^8.1.9",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
