--- a/.github/workflows/npm_test.yml
+++ b/.github/workflows/npm_test.yml
@@ -1,4 +1,4 @@
-name: npm test
+name: Run tests
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
 #   cancel-in-progress: true
 
 jobs:
-  test_pull_request:
+  run_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
