--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
   },
   "dependencies": {
     "@mantine/core": "7.12.2",
+    "@mantine/form": "^7.12.2",
     "@mantine/hooks": "7.12.2",
     "@tabler/icons-react": "^3.14.0",
     "@tanstack/react-query": "^5.55.4",
     "@types/superagent": "^8.1.9",
+    "mantine-form-zod-resolver": "^1.1.0",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "superagent": "^10.1.0"
+    "superagent": "^10.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
